--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,31 @@
 {
   "name": "indesigncolombia/phpgmaps",
-  "description": "",
+  "description": "A codeigniter library that has been modified a bit so that it's laravel friendly",
+  "keywords": [
+    "laravel",
+    "phpgmaps",
+    "googlemaps",
+    "biostall"
+  ],
   "authors": [
     {
-      "name": "Appit Ventures",
-      "email": "michael@appitventures.com"
+      "name": "Michael Hopkins",
+      "email": "michael@appitventures.com",
+      "role": "developer"
     }
   ],
   "require": {
     "php": ">=5.4.0",
-    "illuminate/support": "4.2.*"
+    "laravel/framework": "5.*"
   },
   "autoload": {
-    "psr-0": {
-      "IndesignColombia\\Phpgmaps\\": "src/"
+    "psr-4": {
+      "IndesignColombia\\Phpgmaps\\": "src/Appitventures/Phpgmaps/"
     }
   },
   "extra": {
     "branch-alias": {
-      "dev-laravel4": "1.0-dev",
-      "dev-develop": "1.1-dev",
-      "dev-master": "1.0-dev"
+      "dev-master": "2.0-dev"
     }
   },
   "minimum-stability": "stable"
